arc age d'or + arc chatiment

--- a/templates/Demons/Age_or.html
+++ b/templates/Demons/Age_or.html
@@ -32,7 +32,7 @@
             <figure>
               <img
                 id="proto"
-                src="../img/Demons/Age_or/Age_or.png"
+                src="/img/Demons/Age_or/Age_or.png"
                 class="center hover"
                 data-toggle="modal"
                 data-target="#berserker-img"
@@ -60,7 +60,7 @@
                     </div>
                     <div class="modal-body">
                       <img
-                        src="../img/Demons/Age_or/Age_or.png"
+                        src="/img/Demons/Age_or/Age_or.png"
                         class="modal-image img-fluid"
                       />
                     </div>
@@ -122,7 +122,7 @@
                 <!-- Modal -->
               </figure>
             </div>
-            <p class="description">
+            <p>
               <strong> Description :</strong>
               Bazuso, également connu sous le nom de "L'Ours des Caverne," est
               un imposant guerrier mercenaire. Reconnu pour sa grande taille et
@@ -133,7 +133,7 @@
             </p>
             <br />
 
-            <p class="description">
+            <p>
               <strong> Affinités et Pouvoirs :</strong>
               Bazuso est principalement motivé par l'argent et la gloire, se
               battant en tant que mercenaire sans véritable loyauté à une cause
@@ -150,7 +150,7 @@
             </p>
             <br />
 
-            <p class="description">
+            <p>
               Bazuso rencontre son match en la personne de Guts, un jeune
               mercenaire en quête de gloire. Leur combat met en évidence la
               férocité et la détermination de Guts, qui parvient finalement à
@@ -207,7 +207,7 @@
                 <!-- Modal -->
               </figure>
             </div>
-            <p class="description">
+            <p>
               <strong> Description :</strong>
               Le premier duel entre Guts et Griffith est un moment clé qui se
               déroule peu après la rencontre initiale entre les deux
@@ -218,7 +218,7 @@
             </p>
             <br />
 
-            <p class="description">
+            <p>
               <strong> Description du Duel:</strong>
               Le duel commence lorsque Guts, défié par Griffith, accepte de se
               battre pour décider de son avenir. Griffith propose que si Guts
@@ -236,7 +236,7 @@
             </p>
             <br />
 
-            <p class="description">
+            <p>
               <strong>Conséquences du Duel : </strong>
               Guts, battu et impressionné, accepte de rejoindre la Troupe du
               Faucon. Ce duel marque le début d'une relation complexe entre Guts
@@ -295,7 +295,7 @@
                 <!-- Modal -->
               </figure>
             </div>
-            <p class="description">
+            <p>
               <strong> Description :</strong>
               Le premier combat contre Zodd l'Immortel est un moment crucial, se
               déroulant après que Guts ait rejoint la Troupe du Faucon.
@@ -306,7 +306,7 @@
             </p>
             <br />
 
-            <p class="description">
+            <p>
               <strong> Description du Duel:</strong>
               Le combat commence lorsque Guts rencontre Zodd dans une forteresse
               en ruines, après avoir découvert des cadavres mutilés. Zodd, sous
@@ -327,7 +327,7 @@
             </p>
             <br />
 
-            <p class="description">
+            <p>
               <strong>Conséquences du Duel : </strong>
               Le combat contre Zodd laisse une impression durable sur Guts et
               Griffith. Guts réalise l'existence de forces surnaturelles
@@ -385,7 +385,7 @@
                 <!-- Modal -->
               </figure>
             </div>
-            <p class="description">
+            <p>
               <strong> Description :</strong>
               Le combat se déroule après que Guts ait décidé de quitter la
               Troupe du Faucon. Cette décision est motivée par son désir de
@@ -394,7 +394,7 @@
             </p>
             <br />
 
-            <p class="description">
+            <p>
               <strong> Description du Duel:</strong>
               Le duel commence lorsque Guts annonce son intention de quitter la
               Troupe du Faucon. Griffith, refusant de le laisser partir sans se
@@ -413,7 +413,7 @@
             </p>
             <br />
 
-            <p class="description">
+            <p>
               <strong>Conséquences du Duel : </strong>
               Guts remporte le duel, prouvant qu'il est maintenant suffisamment
               fort pour suivre son propre chemin. La défaite de Griffith est non
@@ -439,7 +439,7 @@
               <figure>
                 <img
                   id="proto"
-                  src="../img/Demons/Age_or/Wyald"
+                  src="/img/Demons/Age_or/Wyald.png"
                   class="center hover"
                   data-toggle="modal"
                   data-target="#berserker-img"
@@ -467,7 +467,7 @@
                       </div>
                       <div class="modal-body">
                         <img
-                          src="../img/Demons/Age_or/Wyald.png"
+                          src="/img/Demons/Age_or/Wyald.png"
                           class="modal-image img-fluid"
                         />
                       </div>
@@ -477,14 +477,14 @@
                 <!-- Modal -->
               </figure>
             </div>
-            <p class="description">
+            <p>
               <strong> Description :</strong>Wyald est le chef sadique des Black
               Dog Knights, une unité de mercenaires connue pour sa cruauté et
               son efficacité. Ce combat se déroule alors que la Troupe du Faucon
               tente de sauver Griffith de sa captivité.
             </p>
             <br />
-            <p class="description">
+            <p>
               <strong> Description du Duel:</strong>
               Le combat commence lorsque Wyald et ses Black Dog Knights
               attaquent la Troupe du Faucon, tentant de capturer Griffith. Guts
@@ -510,7 +510,7 @@
             </p>
             <br />
 
-            <p class="description">
+            <p>
               <strong>Conséquences du Duel : </strong>
               Grâce à l'intervention de Skull Knight, Guts et la Troupe du
               Faucon parviennent à repousser Wyald et ses Black Dog Knights.
@@ -524,6 +524,174 @@
               mission de sauvetage de Griffith.
             </p>
             <br />
+
+            <!-- GOD HAND  -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">God Hand</h2>
+            </li>
+
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="/img/Demons/Age_or/GOD_HANDS.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="/img/Demons/Age_or/GOD_HANDS.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+            <p>
+              <strong> Description :</strong>
+              Les God Hand sont un groupe de cinq entités démoniaques, jouant un
+              rôle central en tant qu'antagonistes principaux de la série. Ils
+              sont des agents du mal et servent les intérêts des puissances
+              obscures connues sous le nom de "la Volonté Maléfique". Chaque
+              membre des God Hand possède des pouvoirs immenses et une apparence
+              sinistre et distincte.
+            </p>
+            <br />
+            <p>
+              <strong> Origine et role:</strong>
+              Les God Hand sont créés par la Volonté Maléfique pour manipuler le
+              destin des mortels et provoquer des événements cataclysmiques. Ils
+              apparaissent pour la première fois lors des cérémonies de
+              l'Éclipse, où ils supervisent la transformation d'humains en
+              apôtres, en échange de sacrifices humains.
+            </p>
+            <br />
+
+            <p><strong>Pouvoirs et Capacités : </strong> <br /></p>
+            <p class="description">
+              <strong>• Manipulation de la Réalité :</strong> Les God Hand
+              peuvent altérer la réalité, créant des dimensions et des
+              illusions. Ils peuvent apparaître et disparaître à volonté, se
+              manifestant souvent lors de rituels ou d'événements surnaturels.
+            </p>
+            <br />
+            <p class="description">
+              <strong>• Immortalité :</strong> Les membres des God Hand sont
+              immortels et ne peuvent être tués par des moyens conventionnels.
+              Leur existence transcende le monde physique.
+            </p>
+            <br />
+            <p class="description">
+              <strong>• Pouvoirs Individuels :</strong> Chaque membre des God
+              Hand possède des pouvoirs uniques et terrifiants, allant de la
+              manipulation du temps et de l'espace à la capacité de contrôler
+              les esprits et les émotions des mortels.
+            </p>
+            <br />
+            <p class="description">
+              <strong>• Invocation d'Apôtres :</strong> Ils ont le pouvoir de
+              transformer des humains en apôtres, des êtres démoniaques dotés de
+              pouvoirs surnaturels, en échange de sacrifices humains.
+            </p>
+            <br />
+            <p class="description">
+              <strong>• Influence sur le Destin :</strong> Les God Hand jouent
+              un rôle crucial dans le déroulement des événements du monde,
+              influençant le destin des personnages clés et orchestrant des
+              calamités pour servir leurs objectifs.
+            </p>
+            <br />
+
+            <p>
+              <strong>Conséquences : </strong>
+              Les God Hand sont directement responsables de nombreuses tragédies
+              et événements majeurs. Ils orchestrent l'Éclipse qui conduit à la
+              transformation de Griffith en Femto et le massacre de la Troupe du
+              Faucon. Leur influence maléfique s'étend à travers le monde,
+              créant des conflits, des guerres et des désastres pour accomplir
+              leurs desseins. Les God Hand représentent la quintessence du mal
+              et de la corruption dans l'univers de "Berserk", incarnant des
+              forces qui vont bien au-delà de la compréhension humaine. Leur
+              présence omniprésente et leurs actions sinistres font d'eux des
+              ennemis redoutables et inévitables pour Guts et les autres
+              protagonistes de la série.
+            </p>
+            <br />
+
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="/img/Demons/Age_or/G&C.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="/img/Demons/Age_or/G&C.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+            <br />
+
+            <p style="text-align: center">
+              <a href="/templates/god_hands.html">
+                Plus d'informations sur les God Hand
+              </a>
+            </p>
           </ul>
         </div>
       </div>
