--- a/templates/troupe_faucon.html
+++ b/templates/troupe_faucon.html
@@ -81,12 +81,12 @@
                             <!-- Modal -->
                         </figure>
                     </div>
-                    <p class="description"> Guts est un guerrier solitaire et taciturne, connu pour sa force surhumaine et ses talents de combattant exceptionnels. 
+                    <p> Guts est un guerrier solitaire et taciturne, connu pour sa force surhumaine et ses talents de combattant exceptionnels. 
                         Il rejoint la Troupe du Faucon après avoir été vaincu par Griffith. 
                         Bien qu'il développe une camaraderie avec les membres de la troupe, il lutte constamment contre ses propres démons intérieurs.
                     </p>
                     <br>
-                    <p class="description"> <strong> Affinités :</strong> Guts développe une camaraderie avec plusieurs membres de la troupe, notamment Casca, Judeau et Pippin.
+                    <p> <strong> Affinités :</strong> Guts développe une camaraderie avec plusieurs membres de la troupe, notamment Casca, Judeau et Pippin.
                          Sa relation avec Griffith est la plus complexe, oscillant entre rivalité, admiration et conflit.
                           Il finit par développer des sentiments profonds pour Casca, qui est elle-même partagée entre son admiration pour Griffith et son amour grandissant pour Guts.
                     </p>
@@ -119,12 +119,12 @@
                             <!-- Modal -->
                         </figure>
                     </div>
-                    <p class="description"> Leader charismatique de la Troupe du Faucon, Griffith est ambitieux, calculateur et d'une beauté presque irréelle. 
+                    <p> Leader charismatique de la Troupe du Faucon, Griffith est ambitieux, calculateur et d'une beauté presque irréelle. 
                         Il rêve de posséder son propre royaume et est prêt à tout pour y parvenir. 
                         Sa détermination et son aura magnétique attirent de nombreux loyaux partisans.
                     </p>
                     <br>
-                    <p class="description"> <strong> Affinités : </strong> Griffith est admiré et respecté par tous les membres de la Troupe du Faucon pour son charisme, son leadership et son ambition. 
+                    <p> <strong> Affinités : </strong> Griffith est admiré et respecté par tous les membres de la Troupe du Faucon pour son charisme, son leadership et son ambition. 
                         Il entretient une relation complexe avec Guts, qu'il considère à la fois comme un ami précieux et une menace potentielle à son rêve. 
                         Casca est profondément dévouée à lui, tandis que Judeau et Pippin lui vouent une loyauté inébranlable.
                    </p>
@@ -158,12 +158,12 @@
                             <!-- Modal -->
                         </figure>
                     </div>
-                    <p class="description"> Unique femme commandant au sein de la Troupe du Faucon, Casca est une combattante féroce et loyale.
+                    <p> Unique femme commandant au sein de la Troupe du Faucon, Casca est une combattante féroce et loyale.
                         Elle nourrit des sentiments complexes pour Griffith et Guts, oscillant entre admiration, amour et jalousie. 
                         Sa détermination et son courage sont sans égal sur le champ de bataille.
                     </p>
                     <br>
-                    <p class="description"> <strong> Affinités :</strong>Casca est farouchement loyale envers Griffith, qu'elle admire profondément, même si ses sentiments pour lui sont ambigus et souvent douloureux. 
+                    <p> <strong> Affinités :</strong>Casca est farouchement loyale envers Griffith, qu'elle admire profondément, même si ses sentiments pour lui sont ambigus et souvent douloureux. 
                         Elle ressent également une affection croissante pour Guts, malgré des débuts tumultueux. 
                         Judeau nourrit des sentiments non réciproques pour elle, et elle respecte la loyauté et la force de Pippin et Rickert.
                     </p>
@@ -197,12 +197,12 @@
                             <!-- Modal -->
                         </figure>
                     </div>
-                    <p class="description"> Judeau est un membre polyvalent et intelligent de la Troupe du Faucon, souvent responsable de la reconnaissance et des stratégies. 
+                    <p> Judeau est un membre polyvalent et intelligent de la Troupe du Faucon, souvent responsable de la reconnaissance et des stratégies. 
                         Il est également adroit avec les couteaux de lancer. 
                         Judeau a une personnalité douce et amicale, et nourrit des sentiments non réciproques pour Casca.
                     </p>
                     <br>
-                    <p class="description"> <strong> Affinités :</strong>Judeau est amical et bienveillant envers tous les membres de la troupe, en particulier Casca, pour qui il a des sentiments non réciproques.
+                    <p> <strong> Affinités :</strong>Judeau est amical et bienveillant envers tous les membres de la troupe, en particulier Casca, pour qui il a des sentiments non réciproques.
                          Il respecte Guts pour ses compétences et sa bravoure, et admire Griffith tout en gardant une certaine lucidité sur ses ambitions. 
                         Il entretient également de bonnes relations avec Pippin et Rickert.
                     </p>
@@ -236,12 +236,12 @@
                             <!-- Modal -->
                         </figure>
                     </div>
-                    <p class="description"> Pippin est un géant silencieux au cœur d'or. 
+                    <p> Pippin est un géant silencieux au cœur d'or. 
                         Son rôle principal dans la Troupe du Faucon est celui de combattant de première ligne grâce à sa force brute. 
                         Bien qu'il parle peu, sa présence imposante et sa loyauté en font un pilier essentiel pour ses compagnons d'armes.
                     </p>
                     <br>
-                    <p class="description"> <strong> Affinités :</strong>Pippin est loyal et protecteur envers ses camarades, notamment Griffith, qu'il respecte profondément. 
+                    <p> <strong> Affinités :</strong>Pippin est loyal et protecteur envers ses camarades, notamment Griffith, qu'il respecte profondément. 
                         Il développe une camaraderie silencieuse mais solide avec Guts et Judeau, et est toujours prêt à soutenir Casca et Rickert. 
                         Sa nature calme et posée fait de lui un pilier pour ses compagnons.
                     </p>
@@ -275,11 +275,11 @@
                             <!-- Modal -->
                         </figure>
                     </div>
-                    <p class="description">Le plus jeune membre de la Troupe du Faucon, Rickert est ingénieux et talentueux en mécanique et en stratégie.
+                    <p>Le plus jeune membre de la Troupe du Faucon, Rickert est ingénieux et talentueux en mécanique et en stratégie.
                         Sa jeunesse et son innocence contrastent avec la brutalité du monde qui l'entoure, mais il fait preuve d'un courage et d'une résilience remarquables.
                     </p>
                     <br>
-                    <p class="description"> <strong> Affinités :</strong>Rickert est le plus jeune et est souvent protégé par les autres membres de la troupe, en particulier par Pippin et Judeau.
+                    <p> <strong> Affinités :</strong>Rickert est le plus jeune et est souvent protégé par les autres membres de la troupe, en particulier par Pippin et Judeau.
                         Il admire Griffith et aspire à être aussi courageux et compétent que Guts. 
                         Sa jeunesse et son ingénuité le rendent attachant aux yeux de ses camarades, qui veillent sur lui avec attention.
                     </p>
@@ -313,11 +313,11 @@
                             <!-- Modal -->
                         </figure>
                     </div>
-                    <p class="description"> Corkus est un ancien bandit qui rejoint la Troupe du Faucon, connu pour son sarcasme et son attitude souvent cynique. 
+                    <p> Corkus est un ancien bandit qui rejoint la Troupe du Faucon, connu pour son sarcasme et son attitude souvent cynique. 
                         Bien qu'il soit parfois en désaccord avec Griffith et jaloux de Guts, il reste un membre loyal de la troupe, apportant une touche de réalisme brutale à leur dynamique.
                     </p>
                     <br>
-                    <p class="description"> <strong> Affinités :</strong>Corkus est souvent en conflit avec Guts, jaloux de ses compétences et de l'attention que Griffith lui accorde. 
+                    <p> <strong> Affinités :</strong>Corkus est souvent en conflit avec Guts, jaloux de ses compétences et de l'attention que Griffith lui accorde. 
                         Il respecte Griffith, mais son attitude cynique et sarcastique le met parfois en désaccord avec les autres membres de la troupe. 
                         Malgré ses frictions, il reste loyal à la troupe et entretient des relations plus neutres avec Casca, Judeau, et Pippin.
                     </p>
